--- a/src/Core/appsettings.json
+++ b/src/Core/appsettings.json
@@ -6,7 +6,7 @@
     "SmtpHost": "smtp.ionos.fr",
     "SmtpPort": 587,
     "SmtpUser": "noreply@poolbooker.com",
-    "SmtpPass": "kO_rLkl01"
+    "SmtpPass": "a09fckxrbDEyMzQ1Ng=="
   },
   "ConnectionStrings": {
     "PoolBookerDbConnectionString": "Server=tcp:82.165.18.217, 1433\\SQLEXPRESS;Database=PoolBooker;Trusted_Connection=False;MultipleActiveResultSets=true;User Id=poolbooker;Password=kO_rLkl01;"
